Update README file.

--- a/README
+++ b/README
@@ -1,13 +1,13 @@
-This is a command line sudoku game for Linux.
+This is a command line sudoku game for Linux. 
 
-Installation:
+[Installation]
 
 $ make
 $ make install-db #generate 3 data files("easy.db, medium.db, hard.db") in working directory.
 
-Run:
+[Run]
 $./sudoku
 
 
-Uninstall:
+[Uninstall]
 $ make uninstall-db
